Reestructuracion de Arquitectura Creacion de Session Bean Remoto y su Interface

--- a/sigaenterprise_backend/pom.xml
+++ b/sigaenterprise_backend/pom.xml
@@ -11,5 +11,6 @@
     <module>sigaenterprise_backend-restful</module>
     <module>sigaenterprise_backend-auth</module>
     <module>sigaenterprise_backend_auth_client</module>
+    <module>sigaenterprise_backend-model</module>
   </modules>
 </project>
