--- a/sigaenterprise_backend/sigaenterprise_backend-auth/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend-auth/pom.xml
@@ -38,6 +38,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
