--- a/sigaenterprise_backend/pom.xml
+++ b/sigaenterprise_backend/pom.xml
@@ -12,5 +12,7 @@
     <module>sigaenterprise_backend-auth</module>
     <module>sigaenterprise_backend_auth_client</module>
     <module>sigaenterprise_backend-model</module>
+    <module>sigaenterprise_backend_bienes_client</module>
+    <module>sigaenterprise_backend_bienes</module>
   </modules>
 </project>
