--- a/sigaenterprise_backend/sigaenterprise_backend_bienes_client/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend_bienes_client/pom.xml
@@ -21,6 +21,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
