Subiendo pom.xml de sigaenterprise_backend se agrego los modulos

--- a/sigaenterprise_backend/pom.xml
+++ b/sigaenterprise_backend/pom.xml
@@ -16,5 +16,7 @@
     <module>sigaenterprise_backend_bienes</module>
     <module>sigaenterprise_backend_treasury</module>
     <module>sigaenterprise_backend_treasury_client</module>
+    <module>sigaenterprise_backend-contabilidad</module>
+    <module>sigaenterprise_backend_contabilidad_client</module>
   </modules>
 </project>
