--- a/sigaenterprise_backend/sigaenterprise_backend-ear/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend-ear/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>sigaenterprise_backend-restful</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend_bienes</artifactId>
+            <version>${project.version}</version>
+            <type>ejb</type>
+        </dependency>
     </dependencies>
 </project>
