--- a/sigaenterprise_backend/sigaenterprise_backend-ear/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend-ear/pom.xml
@@ -59,5 +59,11 @@
             <version>${project.version}</version>
             <type>ejb</type>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend_treasury</artifactId>
+            <version>${project.version}</version>
+            <type>ejb</type>
+        </dependency>
     </dependencies>
 </project>
