--- a/sigaenterprise_backend/sigaenterprise_backend_treasury/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend_treasury/pom.xml
@@ -26,6 +26,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend_treasury_client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
