--- a/sigaenterprise_backend/sigaenterprise_backend_full_model/pom.xml
+++ b/sigaenterprise_backend/sigaenterprise_backend_full_model/pom.xml
@@ -8,11 +8,11 @@
   </parent>
 
     <groupId>com.sigaenterprise</groupId>
-    <artifactId>sigaenterprise_backend_contabilidad_client</artifactId>
+    <artifactId>sigaenterprise_backend_full_model</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ejb</packaging>
 
-    <name>sigaenterprise_backend_contabilidad_client</name>
+    <name>sigaenterprise_backend_full_model</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -21,9 +21,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>sigaenterprise_backend_full_model</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+            <version>2.5.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
