Subiendo pom del moulo de nomina EJB de los modulo de nomina. La cual incluye el acceso local como remote, tambien incluye los modelos correspondientes de nomina.

--- a/sigaenterprise_backend/pom.xml
+++ b/sigaenterprise_backend/pom.xml
@@ -20,5 +20,7 @@
     <module>sigaenterprise_backend_budget</module>
     <module>sigaenterprise_backend_budget_client</module>
     <module>sigaenterprise_backend_full_model</module>
+    <module>sigaenterprise_backend_paysheet</module>
+    <module>sigaenterprise_backend_paysheet_client</module>
   </modules>
 </project>
