--- a/sigaenterprise_frontend/sigaenterprise_frontend-web/pom.xml
+++ b/sigaenterprise_frontend/sigaenterprise_frontend-web/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>sigaenterprise_frontend</artifactId>
-    <groupId>com.sigaenterprise</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>sigaenterprise_frontend</artifactId>
+        <groupId>com.sigaenterprise</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.sigaenterprise</groupId>
     <artifactId>sigaenterprise_frontend-web</artifactId>
@@ -20,6 +20,29 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>6.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.8</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sigaenterprise_backend_auth_client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
